--- a/style.css
+++ b/style.css
@@ -63,12 +63,16 @@ body {
   gap: 50px;
   position: absolute;
   background-color: #3e3c3c;
-  top: 50px;
+  top: 48px;
   left: 0;
   height: 100vh;
   width: 100%;
   padding: 0 15%;
 }
+
+.active .menupartlogo img {
+  content:url('images/Icon.png');
+ }
 
 .active li {
   padding: 20px;
@@ -94,18 +98,6 @@ body {
   padding: 0 15%;
 }
 
-.menupartlogo {
-  background-image: url(images/menupequeno.png);
-  background-repeat: no-repeat;
-  z-index: 1000;
-}
-
-.activeimage .menupartlogo {
-  background-image: url(images/Icon.png);
-  background-repeat: no-repeat;
-  z-index: 1000;
-}
-
 .menupartlogo img:hover {
   transform: scale(1.1);
 }
@@ -119,27 +111,6 @@ body {
   line-height: 20px;
 }
 
-<<<<<<< HEAD
-=======
-
-.active .menupartlogo img {
- content:url('images/linkedin.png');
-}
-
-.active .menupartdesktop{
-  display: block;
-  position: absolute;
-  background-color: #212121;
-  top: 49px;
-  left: 0;
-  height: 100vh;
-  width: 100%;
-  padding: 0 15%;
-  opacity: 0.75;
-
-}
-
->>>>>>> aa7e22313595b6cfbdda95d9ebff3368ea5f52a2
 main {
   background-color: white;
   background-image: linear-gradient(to right, black , rgb(57, 1, 57) 10%, rgb(50, 43, 70), rgb(111, 148, 213), white 110%);
