--- a/style.css
+++ b/style.css
@@ -765,10 +765,12 @@ ul {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  bottom: 0;
   z-index: 2000;
-  padding: 10% 10%;
+  margin: auto auto;
+  max-width: 80%;
+  max-height: 80%;
   display: none;
 }
 
@@ -776,9 +778,20 @@ ul {
   display: flex;
 }
 
+.displayFlexModal {
+  display: flex;
+}
+
 .modal {
   background-color: white;
+  margin: auto auto;
   padding: 5% 5%;
+}
+
+.modal li {
+  background-color: transparent;
+  border: 1px solid black;
+  color: black;
 }
 
 #x-button {
