--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   display: flex;
   justify-content: space-between;
   height: 48px;
-  padding: 0 15%;
+  padding: 0 8%;
   align-items: center;
   margin: auto;
   z-index: 1;
@@ -72,6 +72,13 @@ body {
 
 .active .menupartlogo img {
   content: url('images/Icon.png');
+  position: fixed;
+  margin-top: 30px;
+  z-index: 1000;
+}
+
+.active .container .logo {
+  margin: 20px;
 }
 
 .active li {
@@ -761,16 +768,16 @@ ul {
 }
 
 .modal-container {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
   z-index: 2000;
-  margin: auto auto;
-  max-width: 80%;
-  max-height: 80%;
+  height: 100%;
+  width: 100%;
   display: none;
 }
 
@@ -778,27 +785,96 @@ ul {
   display: flex;
 }
 
+.modal {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: white;
+  padding: 25px;
+  height: 80%;
+  width: 80%;
+  gap: 15px;
+  animation: modal 0.5s;
+
+}
+
+.modal h2 {
+  color: #172B4D;
+  font-family: 'Crete Round';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 44px;
+}
+
 .displayFlexModal {
   display: flex;
 }
 
-.modal {
-  background-color: white;
-  margin: auto auto;
-  padding: 5% 5%;
+.displayFlexModal2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.displayFlexModal img {
+  width: 55%;
+}
+
+.displayFlexModal p {
+  text-align: left;
+  padding: 0 20px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 25px;
+  color: #344563;
+  text-align: justify;
+}
+
+.modal ul {
+  margin: 0;
 }
 
 .modal li {
   background-color: transparent;
-  border: 1px solid black;
+  border: 1px solid lightgrey;
   color: black;
+  margin: 0;
+  padding: 5px;
+  margin-right: 10px;
 }
 
 #x-button {
-  float: right;;
   background-color: red;
-  color: grey;
+  color: black;
   cursor: pointer;
+  z-index: 10000;
+}
+
+.link-source {
+  position: relative;
+  right: 38%;
+  top: 90%;
+}
+
+.link-live {
+  position: relative;
+  right: 28%;
+  top: 90%;
+}
+
+@keyframes modal {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -60px, 0); 
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 /* MEDIA QUERIES */
